--- a/src/demoProjects/rentACar/WebAPI/appsettings.json
+++ b/src/demoProjects/rentACar/WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "RentACarCampConnectionString": "Server=(localdb)\\MSSQLLocalDb;Database=RentACarCampDb;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
