--- a/src/demoProjects/rentACar/WebAPI/appsettings.json
+++ b/src/demoProjects/rentACar/WebAPI/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "RentACarCampConnectionString": "Server=(localdb)\\MSSQLLocalDb;Database=RentACarCampDb;Trusted_Connection=True;"
   },
+  "TokenOptions": {
+    "Audiance": "rentACar@rentACar.com",
+    "Issuer": "rentACar@rentACar.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "strongandsecretkeystrongandsecretkey",
+    "RefreshTokenTTL": 2
+  },
   "AllowedHosts": "*"
 }
